Работает поиск по базе и удаление ззаписей в базе

--- a/composer.json
+++ b/composer.json
@@ -62,6 +62,13 @@
             ]
         }
     },
+
+    "autoload": {
+        "files": [
+            "functions.php"
+        ]
+    },
+
     "repositories": [
         {
             "type": "composer",
